--- a/official/sound-generator/config.json
+++ b/official/sound-generator/config.json
@@ -1,6 +1,4 @@
 {
   "unique_name": "sound_generator",
-  "matching_hotwords": ["make a sound", "create a sound", "sound effect", "generate a sound"],
-  "maintainer": "openhome",
-  "status": "official"
+  "matching_hotwords": ["make a sound", "create a sound", "sound effect", "generate a sound"]
 }
