--- a/official/weather/config.json
+++ b/official/weather/config.json
@@ -1,6 +1,4 @@
 {
   "unique_name": "weather",
-  "matching_hotwords": ["what's the weather", "weather report", "check the weather", "how's the weather"],
-  "maintainer": "openhome",
-  "status": "official"
+  "matching_hotwords": ["what's the weather", "weather report", "check the weather", "how's the weather"]
 }
