--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,48 +1,110 @@
-name: Validate Abilities
+name: Validate Ability
 
 on:
   pull_request:
+    branches: [dev, main]
     paths:
       - 'community/**'
       - 'official/**'
 
 jobs:
-  validate:
+  validate-ability:
+    name: validate-ability
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
-      - name: Find changed Ability folders
+      - name: Find changed abilities
         id: changed
         run: |
-          # Get list of changed files in this PR
-          CHANGED=$(git diff --name-only ${{ github.event.pull_request.base.sha }} HEAD)
-          
-          # Extract unique ability folders (community/xyz or official/xyz)
-          FOLDERS=$(echo "$CHANGED" | grep -oP '^(community|official)/[^/]+' | sort -u)
-          
-          if [ -z "$FOLDERS" ]; then
-            echo "No ability folders changed."
-            echo "folders=" >> $GITHUB_OUTPUT
-          else
-            echo "Changed folders: $FOLDERS"
-            echo "folders=$FOLDERS" >> $GITHUB_OUTPUT
-          fi
+          CHANGED_DIRS=$(git diff --name-only origin/${{ github.base_ref }}...HEAD \
+            | grep -E '^(community|official)/' \
+            | cut -d'/' -f1-2 \
+            | sort -u)
+          echo "dirs=$CHANGED_DIRS" >> $GITHUB_OUTPUT
+          echo "Changed ability directories:"
+          echo "$CHANGED_DIRS"
 
-      - name: Validate changed Abilities
-        if: steps.changed.outputs.folders != ''
+      - name: Validate ability structure
         run: |
-          FAILED=0
-          for folder in ${{ steps.changed.outputs.folders }}; do
+          EXIT_CODE=0
+          
+          for dir in ${{ steps.changed.outputs.dirs }}; do
+            echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+            echo "Validating: $dir"
+            echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+            
+            # Check main.py exists
+            if [ ! -f "$dir/main.py" ]; then
+              echo "❌ Missing main.py in $dir"
+              EXIT_CODE=1
+            else
+              echo "✅ main.py found"
+            fi
+            
+            # Check README.md exists
+            if [ ! -f "$dir/README.md" ]; then
+              echo "❌ Missing README.md in $dir"
+              EXIT_CODE=1
+            else
+              echo "✅ README.md found"
+            fi
+            
+            # Syntax check main.py
+            if [ -f "$dir/main.py" ]; then
+              python -m py_compile "$dir/main.py" 2>&1
+              if [ $? -eq 0 ]; then
+                echo "✅ main.py syntax valid"
+              else
+                echo "❌ main.py has syntax errors"
+                EXIT_CODE=1
+              fi
+            fi
+            
+            # Check for required class pattern
+            if [ -f "$dir/main.py" ]; then
+              if grep -q "MatchingCapability" "$dir/main.py"; then
+                echo "✅ Extends MatchingCapability"
+              else
+                echo "❌ main.py must extend MatchingCapability"
+                EXIT_CODE=1
+              fi
+              
+              if grep -q "register_capability" "$dir/main.py"; then
+                echo "✅ register_capability method found"
+              else
+                echo "❌ main.py must implement register_capability"
+                EXIT_CODE=1
+              fi
+            fi
+            
+            # Security: check for dangerous imports
+            if [ -f "$dir/main.py" ]; then
+              DANGEROUS=$(grep -nE '(subprocess|os\.system|eval\(|exec\(|__import__)' "$dir/main.py" || true)
+              if [ -n "$DANGEROUS" ]; then
+                echo "⚠️  SECURITY WARNING — Potentially dangerous code found:"
+                echo "$DANGEROUS"
+                echo "⚠️  Manual review required by core-maintainers"
+              else
+                echo "✅ No dangerous patterns detected"
+              fi
+            fi
+            
             echo ""
-            echo "=========================================="
-            echo "Validating: $folder"
-            echo "=========================================="
-            python validate_ability.py "$folder" || FAILED=1
           done
-          exit $FAILED
+          
+          exit $EXIT_CODE
+
+      - name: Run validate_ability.py (if exists)
+        run: |
+          if [ -f "validate_ability.py" ]; then
+            python validate_ability.py
+          fi
