--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -1,7 +1,7 @@
 name: Auto Label
 
 on:
-  pull_request:
+  pull_request_target:         
     types: [opened, synchronize]
   issues:
     types: [opened]
@@ -9,21 +9,25 @@ on:
 jobs:
   label-pr:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request_target'
     permissions:
+      contents: read
       pull-requests: write
+      issues: write             
     steps:
       - uses: actions/checkout@v4
       - name: Label based on paths
-        uses: actions/labeler@v5
+        uses: actions/labeler@v6  
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
   label-first-timers:
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request_target'
     permissions:
+      contents: read
       pull-requests: write
+      issues: write              
     steps:
       - name: Check if first-time contributor
         uses: actions/github-script@v7
