--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,7 @@
 name: Lint
 
 on:
-  pull_request:
+  pull_request_target:
     branches: [dev, main]
     paths:
       - '**.py'
@@ -16,6 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
 
       - uses: actions/setup-python@v5
@@ -28,6 +29,7 @@ jobs:
       - name: Get changed Python files
         id: changed
         run: |
+          git fetch origin ${{ github.base_ref }}
           FILES=$(git diff --name-only origin/${{ github.base_ref }}...HEAD -- '*.py' \
             | grep -E '^(community|official|templates)/' \
             | tr '\n' ' ' || true)
@@ -96,12 +98,32 @@ jobs:
 
             body += '> Fix these issues and push again. The lint will re-run automatically.';
 
-            await github.rest.issues.createComment({
+            // Find and update existing bot comment, or create new one
+            const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: body
+              issue_number: context.issue.number
             });
+
+            const botComment = comments.find(c =>
+              c.user.type === 'Bot' && c.body.includes('🔍 Lint Results')
+            );
+
+            if (botComment) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: body
+              });
+            } else {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: body
+              });
+            }
 
       - name: Fail if errors
         if: steps.flake8.outputs.has_errors == 'true' || steps.isort.outputs.has_errors == 'true'
