--- a/.github/workflows/validate-ability.yml
+++ b/.github/workflows/validate-ability.yml
@@ -7,6 +7,10 @@ on:
       - 'community/**'
       - 'official/**'
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   validate-ability:
     name: validate-ability
@@ -34,8 +38,74 @@ jobs:
           echo "Changed ability directories:"
           echo "$CHANGED_DIRS"
 
-      - name: Run validate_ability.py (if exists)
+      - name: Run validate_ability.py
+        id: validate
+        continue-on-error: true
         run: |
           if [ -f "validate_ability.py" ]; then
             python validate_ability.py ${{ steps.changed.outputs.dirs }}
           fi
+
+      - name: Comment PR with validation results
+        if: always() && steps.changed.outputs.dirs != ''
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.PAT_TOKEN }}
+          script: |
+            const fs = require('fs');
+            let body = '';
+
+            // Read validation output
+            try {
+              const output = fs.readFileSync('validation_output.txt', 'utf8');
+              const passed = '${{ steps.validate.outcome }}' === 'success';
+
+              if (passed) {
+                body = `## ✅ Ability Validation Passed\n\n`;
+              } else {
+                body = `## ❌ Ability Validation Failed\n\n`;
+              }
+
+              body += `\`\`\`\n${output}\n\`\`\`\n\n`;
+
+              if (!passed) {
+                body += `### 📚 How to fix\n`;
+                body += `- Read the [Contributing Guide](CONTRIBUTING.md)\n`;
+                body += `- Check the [CapabilityWorker Reference](docs/capability-worker.md)\n`;
+                body += `- See [Blocked Imports & Keywords](https://docs.openhome.com/how_to_build_an_ability#blocked-imports-and-keywords)\n`;
+              }
+            } catch (e) {
+              body = `## ⚠️ Validation script did not produce output.\n\nCheck the workflow logs.`;
+            }
+
+            // Find and update existing bot comment, or create new one
+            const marker = '<!-- ability-validation-bot -->';
+            body = `${marker}\n${body}`;
+
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            });
+
+            const existing = comments.find(c => c.body.includes(marker));
+
+            if (existing) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: existing.id,
+                body,
+              });
+            } else {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body,
+              });
+            }
+
+      - name: Fail if validation failed
+        if: steps.validate.outcome == 'failure'
+        run: exit 1
