--- a/.github/workflows/validate-ability.yml
+++ b/.github/workflows/validate-ability.yml
@@ -50,7 +50,7 @@ jobs:
         if: always() && steps.changed.outputs.dirs != ''
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.PAT_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const fs = require('fs');
             let body = '';
