--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Lint
+name: Lint & Auto-fix
 
 on:
   pull_request_target:
@@ -11,20 +11,20 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       pull-requests: write
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: ${{ github.event.pull_request.head.ref }}
           fetch-depth: 0
 
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: Install linters
-        run: pip install flake8 isort
+      - name: Install tools
+        run: pip install flake8 autopep8
 
       - name: Get changed Python files
         id: changed
@@ -39,7 +39,6 @@ jobs:
             exit 0
           fi
 
-          # Separate __init__.py from other files
           INIT_FILES=""
           LINT_FILES=""
 
@@ -75,7 +74,6 @@ jobs:
               continue
             fi
 
-            # Strip whitespace/blank lines and check if anything remains
             CONTENT=$(sed '/^\s*$/d' "$file")
 
             if [ -n "$CONTENT" ]; then
@@ -86,7 +84,39 @@ jobs:
 
           echo "has_violations=$has_violations" >> $GITHUB_OUTPUT
 
-      # ── Flake8 (skip __init__.py) ───────────────────────────────
+      # ── Auto-fix with autopep8 ──────────────────────────────────
+      - name: Auto-fix with autopep8
+        if: steps.changed.outputs.skip == 'false' && steps.changed.outputs.lint_files != ''
+        id: autofix
+        run: |
+          # Capture before-fix diff for the PR comment
+          autopep8 --in-place --max-line-length=120 --ignore=E501,W503 \
+            ${{ steps.changed.outputs.lint_files }}
+
+          if git diff --quiet; then
+            echo "has_fixes=false" >> $GITHUB_OUTPUT
+            echo "✅ No auto-fixable issues found"
+          else
+            echo "has_fixes=true" >> $GITHUB_OUTPUT
+            echo "🔧 Auto-fixed formatting issues:"
+            git diff --stat
+            git diff > autopep8_diff.txt
+          fi
+
+      # ── Commit and push auto-fixes ──────────────────────────────
+      - name: Commit and push auto-fixes
+        if: steps.autofix.outputs.has_fixes == 'true'
+        id: push_fixes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A
+          git commit -m "style: auto-fix flake8 formatting issues"
+          git push origin ${{ github.event.pull_request.head.ref }} && \
+            echo "push_success=true" >> $GITHUB_OUTPUT || \
+            echo "push_success=false" >> $GITHUB_OUTPUT
+
+      # ── Flake8 (remaining issues after auto-fix) ────────────────
       - name: Run Flake8
         if: steps.changed.outputs.skip == 'false' && steps.changed.outputs.lint_files != ''
         id: flake8
@@ -102,26 +132,11 @@ jobs:
             echo "has_errors=false" >> $GITHUB_OUTPUT
           fi
 
-      # ── isort (skip __init__.py) ────────────────────────────────
-      - name: Run isort
-        if: steps.changed.outputs.skip == 'false' && steps.changed.outputs.lint_files != ''
-        id: isort
-        continue-on-error: true
-        run: |
-          OUTPUT=$(isort --check-only --diff ${{ steps.changed.outputs.lint_files }} 2>&1) || true
-          echo "$OUTPUT"
-          echo "$OUTPUT" > isort_output.txt
-          if [ -n "$OUTPUT" ]; then
-            echo "has_errors=true" >> $GITHUB_OUTPUT
-          else
-            echo "has_errors=false" >> $GITHUB_OUTPUT
-          fi
-
       # ── Create empty fallback files if steps were skipped ───────
       - name: Ensure output files exist
         if: steps.changed.outputs.skip == 'false'
         run: |
-          touch flake8_output.txt isort_output.txt init_violations.txt
+          touch flake8_output.txt init_violations.txt autopep8_diff.txt
 
       # ── PR Comment ──────────────────────────────────────────────
       - name: Comment on PR
@@ -132,16 +147,17 @@ jobs:
             const fs = require('fs');
 
             const flake8 = fs.readFileSync('flake8_output.txt', 'utf8').trim();
-            const isort = fs.readFileSync('isort_output.txt', 'utf8').trim();
             const initViolations = fs.readFileSync('init_violations.txt', 'utf8').trim();
+            const autopep8Diff = fs.readFileSync('autopep8_diff.txt', 'utf8').trim();
 
             const flake8Err = '${{ steps.flake8.outputs.has_errors }}' === 'true';
-            const isortErr = '${{ steps.isort.outputs.has_errors }}' === 'true';
             const initErr = '${{ steps.init_check.outputs.has_violations }}' === 'true';
+            const autoFixed = '${{ steps.autofix.outputs.has_fixes }}' === 'true';
+            const pushOk = '${{ steps.push_fixes.outputs.push_success }}' !== 'false';
             const lintFiles = '${{ steps.changed.outputs.lint_files }}';
             const initFiles = '${{ steps.changed.outputs.init_files }}';
 
-            const allPassed = !flake8Err && !isortErr && !initErr;
+            const allPassed = !flake8Err && !initErr;
 
             let body = '<!-- lint-check-result -->\n';
             body += '## 🔍 Lint Results\n\n';
@@ -158,20 +174,30 @@ jobs:
               }
             }
 
+            // ── Auto-fix section ──
+            if (autoFixed) {
+              if (pushOk) {
+                body += '### 🔧 Auto-fixed & Pushed\n\n';
+                body += 'The following formatting issues were **automatically fixed** and pushed to this branch:\n\n';
+                body += '<details><summary>View auto-fix diff</summary>\n\n';
+                body += '```diff\n' + autopep8Diff.slice(0, 3000) + '\n```\n\n';
+                body += '</details>\n\n';
+              } else {
+                body += '### ⚠️ Auto-fix Failed to Push\n\n';
+                body += 'Formatting issues were detected but could not be pushed (fork PRs cannot be auto-fixed). Apply manually:\n\n';
+                body += '```bash\npip install autopep8\nautopep8 --in-place --max-line-length=120 --ignore=E501,W503 <your files>\n```\n\n';
+              }
+            }
+
             // ── Flake8 ──
             if (lintFiles) {
               body += `**Files linted:** \`${lintFiles}\`\n\n`;
               if (flake8Err) {
-                body += '### ❌ Flake8 Errors\n```\n' + flake8 + '\n```\n\n';
+                body += '### ❌ Flake8 Errors (cannot be auto-fixed)\n\n';
+                body += 'These issues require manual fixes:\n\n';
+                body += '```\n' + flake8 + '\n```\n\n';
               } else {
                 body += '### ✅ Flake8 — Passed\n\n';
-              }
-
-              // ── isort ──
-              if (isortErr) {
-                body += '### ❌ Import Order (isort)\n```diff\n' + isort + '\n```\n\n';
-              } else {
-                body += '### ✅ isort — Passed\n\n';
               }
             } else {
               body += '_No non-init Python files to lint._\n\n';
@@ -181,7 +207,7 @@ jobs:
             if (allPassed) {
               body += '> ✅ All checks passed!';
             } else {
-              body += '> Fix these issues and push again. The lint will re-run automatically.';
+              body += '> Fix the remaining issues and push again. The lint will re-run automatically.';
             }
 
             // ── Upsert comment ──
@@ -215,7 +241,6 @@ jobs:
       - name: Fail if errors
         if: |
           steps.flake8.outputs.has_errors == 'true' ||
-          steps.isort.outputs.has_errors == 'true' ||
           steps.init_check.outputs.has_violations == 'true'
         run: |
           echo "❌ Lint failed — check the PR comment for details"
