Update GitHub Actions workflow for fork PR handling
Signed-off-by: Muhammad Rizwan <awanrizwan615@gmail.com>

--- a/.github/workflows/validate-ability.yml
+++ b/.github/workflows/validate-ability.yml
@@ -19,11 +19,21 @@ jobs:
       - name: Checkout PR code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
 
       - name: Fetch base branch for diff
         run: git fetch origin ${{ github.base_ref }}
+
+      - name: Check if fork PR
+        id: fork_check
+        run: |
+          if [ "${{ github.event.pull_request.head.repo.full_name }}" = "${{ github.repository }}" ]; then
+            echo "is_fork=false" >> $GITHUB_OUTPUT
+          else
+            echo "is_fork=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -46,7 +56,6 @@ jobs:
 
           echo "skip=false" >> $GITHUB_OUTPUT
 
-          # Store as newline-delimited (handles edge cases)
           EOF_MARKER=$(dd if=/dev/urandom bs=15 count=1 2>/dev/null | base64)
           echo "dirs<<$EOF_MARKER" >> $GITHUB_OUTPUT
           echo "$CHANGED_DIRS" >> $GITHUB_OUTPUT
@@ -67,14 +76,12 @@ jobs:
           while IFS= read -r dir; do
             [ -z "$dir" ] && continue
 
-            # Only auto-fix community folders
             if [[ "$dir" != community/* ]]; then
               FIXED_DIRS="${FIXED_DIRS}${dir}"$'\n'
               continue
             fi
 
             folder_name=$(basename "$dir")
-            # Replace underscores and spaces with hyphens
             fixed_name=$(echo "$folder_name" | sed 's/[_ ]\+/-/g')
 
             if [ "$folder_name" != "$fixed_name" ]; then
@@ -97,24 +104,22 @@ jobs:
 
           echo "has_renames=$has_renames" >> $GITHUB_OUTPUT
 
-          # Save rename log for PR comment
           echo "$RENAME_LOG" > rename_log.txt
 
-          # Save fixed dirs for subsequent steps (space-separated)
           FIXED_DIRS_SPACE=$(echo "$FIXED_DIRS" | tr '\n' ' ' | xargs)
           echo "dirs=$FIXED_DIRS_SPACE" >> $GITHUB_OUTPUT
 
           echo "📁 Final dirs for validation: $FIXED_DIRS_SPACE"
 
       - name: Commit and push folder renames
-        if: steps.fix_names.outputs.has_renames == 'true'
+        if: steps.fix_names.outputs.has_renames == 'true' && steps.fork_check.outputs.is_fork == 'false'
         id: push_renames
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
           git commit -m "fix: rename community ability folders to use hyphens"
-          git push origin ${{ github.event.pull_request.head.ref }} && \
+          git push origin HEAD:refs/heads/${{ github.event.pull_request.head.ref }} && \
             echo "push_success=true" >> $GITHUB_OUTPUT || \
             echo "push_success=false" >> $GITHUB_OUTPUT
 
@@ -154,12 +159,13 @@ jobs:
 
             // ── Folder rename section ──
             const hasRenames = '${{ steps.fix_names.outputs.has_renames }}' === 'true';
-            const pushOk = '${{ steps.push_renames.outputs.push_success }}' !== 'false';
+            const isFork = '${{ steps.fork_check.outputs.is_fork }}' === 'true';
+            const pushOk = '${{ steps.push_renames.outputs.push_success }}' === 'true';
 
             if (hasRenames) {
               const renameLog = fs.readFileSync('rename_log.txt', 'utf8').trim();
 
-              if (pushOk) {
+              if (!isFork && pushOk) {
                 body += `## 📁 Folder Names Auto-Fixed\n\n`;
                 body += `Community ability folders may only use **hyphens** (\`-\`) — no underscores or spaces.\n\n`;
                 body += `The following folders were **automatically renamed** and pushed:\n\n`;
@@ -167,7 +173,10 @@ jobs:
               } else {
                 body += `## ⚠️ Folder Names Need Fixing\n\n`;
                 body += `Community ability folders may only use **hyphens** (\`-\`) — no underscores or spaces.\n\n`;
-                body += `Auto-rename could not be pushed (likely a fork PR). Please rename manually:\n\n`;
+                if (isFork) {
+                  body += `This PR is from a fork, so auto-rename cannot be pushed. `;
+                }
+                body += `Please rename manually:\n\n`;
                 body += `\`\`\`\n${renameLog}\n\`\`\`\n\n`;
                 body += `\`\`\`bash\ngit mv community/my_ability community/my-ability\n\`\`\`\n\n`;
               }
