--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,20 +11,21 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       pull-requests: write
     steps:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
       - name: Install linters
-        run: pip install flake8 isort
+        run: pip install flake8 autopep8
 
       - name: Get changed Python files
         id: changed
@@ -84,7 +85,30 @@ jobs:
 
           echo "has_violations=$has_violations" >> $GITHUB_OUTPUT
 
-      # ── Flake8 (skip __init__.py) ───────────────────────────────
+      # ── Auto-format with autopep8 ───────────────────────────────
+      - name: Auto-format with autopep8
+        if: steps.changed.outputs.skip == 'false' && steps.changed.outputs.lint_files != ''
+        id: autoformat
+        run: |
+          autopep8 --in-place --max-line-length=120 --ignore=E501,W503 \
+            ${{ steps.changed.outputs.lint_files }}
+
+          if git diff --quiet; then
+            echo "has_fixes=false" >> $GITHUB_OUTPUT
+          else
+            echo "has_fixes=true" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Commit auto-format fixes
+        if: steps.autoformat.outputs.has_fixes == 'true'
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add -A
+          git commit -m "style: auto-format Python files with autopep8"
+          git push
+
+      # ── Flake8 (check remaining issues after auto-format) ──────
       - name: Run Flake8
         if: steps.changed.outputs.skip == 'false' && steps.changed.outputs.lint_files != ''
         id: flake8
@@ -100,26 +124,11 @@ jobs:
             echo "has_errors=false" >> $GITHUB_OUTPUT
           fi
 
-      # ── isort (skip __init__.py) ────────────────────────────────
-      - name: Run isort
-        if: steps.changed.outputs.skip == 'false' && steps.changed.outputs.lint_files != ''
-        id: isort
-        continue-on-error: true
-        run: |
-          OUTPUT=$(isort --check-only --diff ${{ steps.changed.outputs.lint_files }} 2>&1) || true
-          echo "$OUTPUT"
-          echo "$OUTPUT" > isort_output.txt
-          if [ -n "$OUTPUT" ]; then
-            echo "has_errors=true" >> $GITHUB_OUTPUT
-          else
-            echo "has_errors=false" >> $GITHUB_OUTPUT
-          fi
-
       # ── Create empty fallback files if steps were skipped ───────
       - name: Ensure output files exist
         if: steps.changed.outputs.skip == 'false'
         run: |
-          touch flake8_output.txt isort_output.txt init_violations.txt
+          touch flake8_output.txt init_violations.txt
 
       # ── PR Comment ──────────────────────────────────────────────
       - name: Comment on PR
@@ -130,19 +139,24 @@ jobs:
             const fs = require('fs');
 
             const flake8 = fs.readFileSync('flake8_output.txt', 'utf8').trim();
-            const isort = fs.readFileSync('isort_output.txt', 'utf8').trim();
             const initViolations = fs.readFileSync('init_violations.txt', 'utf8').trim();
 
             const flake8Err = '${{ steps.flake8.outputs.has_errors }}' === 'true';
-            const isortErr = '${{ steps.isort.outputs.has_errors }}' === 'true';
             const initErr = '${{ steps.init_check.outputs.has_violations }}' === 'true';
+            const autoFixed = '${{ steps.autoformat.outputs.has_fixes }}' === 'true';
             const lintFiles = '${{ steps.changed.outputs.lint_files }}';
             const initFiles = '${{ steps.changed.outputs.init_files }}';
 
-            const allPassed = !flake8Err && !isortErr && !initErr;
+            const allPassed = !flake8Err && !initErr;
 
             let body = '<!-- lint-check-result -->\n';
             body += '## 🔍 Lint Results\n\n';
+
+            // ── Auto-format notice ──
+            if (autoFixed) {
+              body += '### 🔧 Auto-formatted\n';
+              body += 'Some files were automatically formatted with `autopep8` and committed.\n\n';
+            }
 
             // ── __init__.py check ──
             if (initFiles) {
@@ -160,16 +174,9 @@ jobs:
             if (lintFiles) {
               body += `**Files linted:** \`${lintFiles}\`\n\n`;
               if (flake8Err) {
-                body += '### ❌ Flake8 Errors\n```\n' + flake8 + '\n```\n\n';
+                body += '### ❌ Flake8 Errors (could not be auto-fixed)\n```\n' + flake8 + '\n```\n\n';
               } else {
                 body += '### ✅ Flake8 — Passed\n\n';
-              }
-
-              // ── isort ──
-              if (isortErr) {
-                body += '### ❌ Import Order (isort)\n```diff\n' + isort + '\n```\n\n';
-              } else {
-                body += '### ✅ isort — Passed\n\n';
               }
             } else {
               body += '_No non-init Python files to lint._\n\n';
@@ -179,7 +186,7 @@ jobs:
             if (allPassed) {
               body += '> ✅ All checks passed!';
             } else {
-              body += '> Fix these issues and push again. The lint will re-run automatically.';
+              body += '> Fix the remaining issues and push again. The lint will re-run automatically.';
             }
 
             // ── Upsert comment ──
@@ -213,7 +220,6 @@ jobs:
       - name: Fail if errors
         if: |
           steps.flake8.outputs.has_errors == 'true' ||
-          steps.isort.outputs.has_errors == 'true' ||
           steps.init_check.outputs.has_violations == 'true'
         run: |
           echo "❌ Lint failed — check the PR comment for details"
